# mcp-data-core

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/mcp_data_core/: __init__.py  base_client.py  corpus_compression.py  corpus_db.py  envelope.py  exceptions.py  filenames.py  logging.py
src/mcp_data_core/mcp/: __init__.py  _env.py  annotations.py  auth.py  conditional.py  downloads.py  middleware.py  server_factory.py
tests/: test_auth.py  test_conditional.py  test_corpus_db.py  test_envelope.py  test_filenames.py  test_logging.py  test_mcp_downloads.py  test_middleware.py  test_oauth2.py  test_server_factory.py
