[project]
name = "mcp-data-core"
version = "0.1.0"
description = "Shared async HTTP scaffolding, response envelopes, corpus storage, and MCP server plumbing for data-fetching research toolkits."
readme = "README.md"
authors = [
    { name = "Parker Hancock", email = "633163+parkerhancock@users.noreply.github.com" }
]
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
keywords = ["mcp", "httpx", "async", "research", "cache", "retry", "scaffolding"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "anyio>=4.4",
    "httpx>=0.27",
    "h2>=4.1",
    "pydantic>=2.7",
    "python-dateutil>=2.9",
    "tenacity>=8.4",
    "hishel[async]>=1.1.3",
    "pyyaml>=6.0",
    "zstandard>=0.22",
]

[project.optional-dependencies]
mcp = [
    "fastmcp>=3.2.3",
    "starlette>=0.37",
    # fastmcp imports `from griffe import ...` — the 2.x release split the
    # top-level module out into a separate `griffelib` distribution, so
    # fastmcp's import fails on griffe>=2. Pin here until upstream fastmcp
    # either migrates to griffelib or re-adds the compat shim.
    "griffe<2",
]
gcs = [
    "google-cloud-storage>=2.18",
]

[project.urls]
Homepage = "https://github.com/parkerhancock/mcp-data-core"
Repository = "https://github.com/parkerhancock/mcp-data-core"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_data_core"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.lint.isort]
known-first-party = ["mcp_data_core"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
